welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:8: error: not found: value nums
			if (nums(i)>=nums(j)) {
                            ^